# jira-processor

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
src/jira_extractor/: cli.py  logging_config.py
src/jira_extractor/client/: jira_client.py  rate_limiter.py
src/jira_extractor/config/: loader.py  schema.py
src/jira_extractor/extractor/: extractor.py  paginator.py  query_builder.py
src/jira_extractor/scheduler/: runner.py
tests/: test_extractor_flatten.py  test_paginator.py  test_query_builder.py  test_writers.py
